// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderUtilityMenu it should pass in a custom prop 1`] = `
<ContentContainer
  aria-label="Utility Menu"
  className="utility-menu"
  fill={false}
  footer={null}
  header={
    <div
      className="header"
    >
      <span
        className="left-container"
      >
        <button
          aria-label="Back button"
          className="back-button"
          onClick={[Function]}
        >
          <IconLeft
            className="icon-left"
            data-name="Layer 1"
            isBidi={true}
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
        <span
          className="header-text"
        >
          title
        </span>
      </span>
      <MenuDivider />
    </div>
  }
  id="test"
  onDisclose={[Function]}
  role="navigation"
/>
`;

exports[`HeaderUtilityMenu should render with default props 1`] = `
<ContentContainer
  aria-label="Utility Menu"
  className="utility-menu"
  fill={false}
  footer={null}
  header={
    <div
      className="header"
    >
      <span
        className="left-container"
      >
        <button
          aria-label="Back button"
          className="back-button"
          onClick={[Function]}
        >
          <IconLeft
            className="icon-left"
            data-name="Layer 1"
            isBidi={true}
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
        <span
          className="header-text"
        >
          title
        </span>
      </span>
      <MenuDivider />
    </div>
  }
  onDisclose={[Function]}
  role="navigation"
/>
`;

exports[`HeaderUtilityMenu should render with isHeightBounded 1`] = `
<ContentContainer
  aria-label="Utility Menu"
  className="utility-menu"
  fill={true}
  footer={null}
  header={
    <div
      className="header"
    >
      <span
        className="left-container"
      >
        <button
          aria-label="Back button"
          className="back-button"
          onClick={[Function]}
        >
          <IconLeft
            className="icon-left"
            data-name="Layer 1"
            isBidi={true}
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
        <span
          className="header-text"
        >
          title
        </span>
      </span>
      <MenuDivider />
    </div>
  }
  onDisclose={[Function]}
  role="navigation"
/>
`;

exports[`HeaderUtilityMenu should render with onRequestClose set 1`] = `
<ContentContainer
  aria-label="Utility Menu"
  className="utility-menu"
  fill={false}
  footer={null}
  header={
    <div
      className="header"
    >
      <span
        className="left-container"
      >
        <button
          aria-label="Back button"
          className="back-button"
          onClick={[Function]}
        >
          <IconLeft
            className="icon-left"
            data-name="Layer 1"
            isBidi={true}
            viewBox="0 0 48 48"
            xmlns="http://www.w3.org/2000/svg"
          />
        </button>
        <span
          className="header-text"
        >
          title
        </span>
      </span>
      <MenuDivider />
    </div>
  }
  onDisclose={[Function]}
  role="navigation"
/>
`;
